<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorPrimary"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/switchModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?colorPrimary"
        android:contentDescription="@string/switch_mode"
        android:minHeight="48dp"
        android:src="@drawable/ic_sun"
        app:layout_constraintBottom_toTopOf="@+id/calcResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/calcResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="end|bottom"
        android:padding="8dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/calcContainer" />

    <GridLayout
        android:id="@+id/calcContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="16dp"
            android:text="@string/button_7_text"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_8_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_9_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="?operatorButtonColor"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_divide_text"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:paddingVertical="16dp"
            android:insetBottom="0dp"
            android:text="@string/button_4_text"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_5_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_6_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="?operatorButtonColor"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_multiply_text"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:paddingVertical="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_1_text"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_2_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_3_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="?operatorButtonColor"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_subtract_text"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:paddingVertical="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_0_text"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_dot_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="@color/button_text"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_clear_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="?colorPrimary"
            android:textColor="?operatorButtonColor"
            android:textSize="24sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_add_text"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="14dp"/>

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/orange"
            android:paddingVertical="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textSize="24sp"
            android:text="@string/button_result_text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            app:cornerRadius="14dp" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>